<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abhiswarming</name>
  <version>1.0.0</version>
  <description>Simulate multiple drones with Gazebo, ROS2 and ArduPilot</description>
  <maintainer email="work@abhijithganesh.com">sentinel</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <build_depend>rapidjson-dev</build_depend>  

    <!-- Harmonic -->
    <depend condition="$GZ_VERSION == harmonic">gz-cmake3</depend>
    <depend condition="$GZ_VERSION == harmonic">gz-sim8</depend>
    <!-- Garden (default) -->
    <depend condition="$GZ_VERSION == garden">gz-cmake3</depend>
    <depend condition="$GZ_VERSION == garden">gz-sim7</depend>
    <depend condition="$GZ_VERSION == ''">gz-cmake3</depend>
    <depend condition="$GZ_VERSION == ''">gz-sim7</depend>
  
    
  </export>



</package>
